@@ -113,21 +113,36 @@ class Compiler:
         compilation.  If 'None', the compiler will use a default
         value.
 
-        returns -- A tuple '(status, output, command)'.  The 'status'
-        is the exit status returned by the compiler, as indicated by
+        returns -- A tuple '(status, output)'.  The 'status' is the
+        exit status returned by the compiler, as indicated by
         'waitpid'.  The 'output' is a string containing the standard
-        outpt and standard errror generated by the compiler.  The
-        'command' is a list of strings indicating the command used to
-        perform the compilation."""
+        outpt and standard errror generated by the compiler."""
 
         # Get the command to use.
         command = self.GetCompilationCommand(mode, files, options, output)
         # Invoke the compiler.
+        return self.ExecuteCommand(dir, command)
+        
+
+    def ExecuteCommand(self, dir, command):
+        """Execute 'command' in 'dir'.
+
+        'dir' -- The directory in which to execute the command.
+        
+        'command' --  A sequence of strings, as returned by
+        'GetCompilationCommand'.
+
+        returns -- A tuple '(status, output)'.  The 'status' is the
+        exit status returned by the compiler, as indicated by
+        'waitpid'.  The 'output' is a string containing the standard
+        outpt and standard errror generated by the compiler."""
+        
+        # Invoke the compiler.
         executable = CompilerExecutable()
         status = executable.Run(command, dir = dir)
         # Return all of the information.
-        return (status, executable.stdout, command)
-        
+        return (status, executable.stdout)
+
         
     def GetCompilationCommand(self, mode, files, options=[], output=None):
         """Return the appropriate command for compiling 'files'.
